// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Article Count test Render the authors article counts as expected for a UQ researcher) 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1vpwcmr-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-1bckzb6-MuiGrid-root"
    >
      313
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-184x3de-MuiGrid-root"
    >
      eSpace works from
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-1lr4ka9-MuiGrid-root"
    >
      1975
      <span>
         to 
      </span>
      2018
    </div>
  </div>
</div>
`;

exports[`Dashboard Article Count test should not render anything if any data is missing 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1vpwcmr-MuiGrid-root"
  />
</div>
`;
